# envy

./: LICENSE  README.md  pyproject.toml
envy/: __init__.py
ta_envy/: __init__.py
tests/: test_envy.py
